struttura html completata, css aggiunto e sistemato

--- a/index.html
+++ b/index.html
@@ -7,15 +7,65 @@
 
     <!-- Title -->
     <title>Font Icons</title>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
     <!-- Css -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <!-- BODY -->
 <body>
+    <!-- HEADER -->
+    <header>
+        <!-- Container -->
+        <div class="container">
+            <!-- Logo -->
+            <div class="logo">
+                <img src="img/logo.png" alt="logo">
+            </div>
+        </div>
+        <!-- Container end -->
+
+        <!-- Nav -->
+        <nav>
+            <!-- Nav Container -->
+            <div class="nav_container">
+                <!-- Container -->
+                <div class="container">
+                    <label for="type" class="ms_label">Filtra Per Tipo</label>
+                    <select id="type">
+                        <option value=""></option>
+                    </select>
+                </div>
+                <!-- Container end -->
+            </div>
+            <!-- Nav Container end -->
+        </nav>
+        <!-- Nav end -->
+    </header>
+    <!-- HEADER END -->
+
     <!-- MAIN -->
     <main>
-        
+        <!-- Section -->
+        <section class="section_container">
+            <!-- Container -->
+            <div class="container">
+                <!-- Icon container -->
+                <div class="icon_container">
+
+                    <!-- Icon Element -->
+                    <div class="icon">
+                        <i class="fas fa-cat"></i>
+                        <div>Cats</div>
+                    </div>
+                    
+                </div>
+                <!-- Icon container end-->
+            </div>
+            <!-- Container end -->
+        </section>
+        <!-- Section end-->
     </main>
     <!-- MAIN END -->
 
