--- a/index.html
+++ b/index.html
@@ -52,13 +52,9 @@
             <!-- Container -->
             <div class="container">
                 <!-- Icon container -->
-                <div class="icon_container">
+                <div id="icon_container" class="icons_container">
 
                     <!-- Icon Element -->
-                    <div class="icon">
-                        <i class="fas fa-cat"></i>
-                        <div>Cats</div>
-                    </div>
                     
                 </div>
                 <!-- Icon container end-->
