--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="container">
                     <label for="type" class="ms_label">Filtra Per Tipo</label>
                     <select id="type">
-                        <option value=""></option>
+                        <option value="">All</option>
                     </select>
                 </div>
                 <!-- Container end -->
